# BlackHole

./: Blackhole.sh  CMakeLists.txt  README.md  Setup.txt
include/: cuda_simulation.h  stats_overlay.h
src/: GLDebugMessageCallback.cc  cuda_simulation.cu  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3_loader.h  main.cpp  render.cpp  shader.cpp  stats_overlay.cpp  texture.cpp
